vcluster_versioned_docs/version-0.23.0/_fragments/integrations/kube-virt.mdx
import KubeVirt from '../../_partials/config/integrations/kubeVirt.mdx'
import ProAdmonition from '../../_partials/admonitions/pro-ultimate-admonition.mdx'

<ProAdmonition/>

vCluster offers the possibility to reuse a [KubeVirt](https://kubevirt.io/) installation of the host cluster within the vCluster.
vCluster is able to sync [KubeVirt](https://kubevirt.io/) resources from the vCluster to the host cluster and allows you to use `virtctl` within the vCluster.

## Enable KubeVirt Integration

To enable the integration, use the following configuration inside your `vcluster.yaml`:
```yaml
integrations:
  kubeVirt:
    enabled: true
    # If you want vCluster to sync data volumes as well.
    #sync:
    #  dataVolumes:
    #    enabled: true
```

Next you can deploy and use KubeVirt resources inside the vCluster which will be synced to the host cluster.

## Sync DataVolumes

In order to sync KubeVirt [DataVolumes](https://kubevirt.io/user-guide/storage/disks_and_volumes/), please make sure to install the [KubeVirt Containerized Data Importer](https://kubevirt.io/user-guide/storage/containerized_data_importer/). Then enable the following setting in the `vcluster.yaml`:
```yaml
integrations:
  kubeVirt:
    enabled: true
    sync:
      dataVolumes:
        enabled: true
```

After vCluster restarts, the `DataVolumes` CRD should be visible within the vCluster.

## Limitations

vCluster currently only supports syncing and using the following resources inside the vCluster:
* `VirtualMachine`
* `VirtualMachineInstance`
* `VirtualMachinePool`
* `VirtualMachineClone`
* `DataVolume` (needs to be enabled via `integrations.kubeVirt.sync.dataVolumes.enabled`)

The following [virtctl](https://kubevirt.io/user-guide/user_workloads/virtctl_client_tool/) commands are supported:
* `virtctl start`
* `virtctl stop`
* `virtctl migrate`
* `virtctl ssh`
* `virtctl vnc`
* `virtctl pause`
* `virtctl unpause`
* `virtctl scp`
* `virtctl restart`
* `virtctl port-forward`
* `virtctl console`

## Config reference

<KubeVirt />
